WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220761
REGRESSION (Big Sur): position:absolute elements inside nested overflow:scroll don't track scrolling
https://bugs.webkit.org/show_bug.cgi?id=220761
Summary
REGRESSION (Big Sur): position:absolute elements inside nested overflow:scrol...
Simon Fraser (smfr)
Reported
2021-01-19 20:55:42 PST
REGRESSION (Big Sur): position:absolute elements inside nested overflow:scroll don't track scrolling
Attachments
Patch
(26.93 KB, patch)
2021-01-19 21:01 PST
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-01-19 21:01:30 PST
Created
attachment 417941
[details]
Patch
Simon Fraser (smfr)
Comment 2
2021-01-19 21:01:33 PST
<
rdar://problem/69075263
>
Antti Koivisto
Comment 3
2021-01-20 10:18:04 PST
Comment on
attachment 417941
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417941&action=review
> Source/WebCore/rendering/RenderLayerCompositor.cpp:3394 > + auto needsMovesNode = [&]() {
() is not needed
Simon Fraser (smfr)
Comment 4
2021-01-20 13:22:39 PST
https://trac.webkit.org/changeset/271651/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug